--- a/DavidMahnke_notebook1_starter.ipynb
+++ b/DavidMahnke_notebook1_starter.ipynb
@@ -24,6 +24,17 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JUH9bStqnWez"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "8V1Slz52hI39"
@@ -45,14 +56,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "431502fc-a673-4f70-cdea-d4aa71dbd084"
+        "outputId": "45e9de36-8412-41a5-e5c3-8d52235a564a"
       },
       "source": [
         "import pandas as pd\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -71,7 +82,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 205
         },
-        "outputId": "57b7d1e5-7946-4ee3-eafe-d4233575643a"
+        "outputId": "b7c5fc48-7cb1-4a69-fe5d-d7361ed3290f"
       },
       "source": [
         "#import the data:\n",
@@ -80,7 +91,7 @@
         "poke = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/CS167/pokemon.csv')\n",
         "poke.head()"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -216,7 +227,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 3
         }
       ]
     },
@@ -238,13 +249,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "81cde731-3de2-47a3-fbe9-1ea1d8cca753"
+        "outputId": "ba1e8215-c744-4fc6-ffa6-809c48c4d0c5"
       },
       "source": [
         "\n",
         "print(poke['Type 1'].unique())\n"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -293,15 +304,16 @@
         "id": "XFTTrwtTYESB",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 240
+          "height": 295
         },
-        "outputId": "bf286935-3d37-4151-9f72-528a4d60cb23"
+        "outputId": "58a59de3-4a2a-4fd6-a4f6-ac47afb757a3"
       },
       "source": [
         "fire_flying_pokemon = poke[poke[\"Type 1\"] == 'Fire'][ poke[\"Type 2\"] == 'Flying']\n",
-        "fire_flying_pokemon.head()\n"
+        "fire_flying_pokemon.head()\n",
+        "\n"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -445,7 +457,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 71
+          "execution_count": 7
         }
       ]
     },
@@ -466,12 +478,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "dd5e9816-e358-46e8-bce0-ec82e439ed38"
+        "outputId": "b2d6b31c-b2ca-4e12-e1f4-a3aad2444c2b"
       },
       "source": [
         "fire_flying_pokemon['Attack'].median()"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -481,7 +493,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 72
+          "execution_count": 8
         }
       ]
     },
@@ -503,13 +515,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "71d8f423-bf17-4c5a-d725-707efc559769"
+        "outputId": "65f95c67-7956-46b0-c10b-7c8fed63a41c"
       },
       "source": [
         "gen1_subset = poke[poke['Generation'] == 1][['Generation','Name','Type 1','Type 2','Total']]\n",
         "print(gen1_subset)\n"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -551,15 +563,15 @@
         "id": "ppZBXANesLWG",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 112
+          "height": 166
         },
-        "outputId": "ef65a78c-2a6f-42b1-9194-4c62cd9fefdf"
+        "outputId": "976bbd7d-1694-49b6-a5fd-7ca7eb04e384"
       },
       "source": [
         "poke.groupby(\"Type 1\").mean(\"Total\").sort_values('Total',ascending=False)[:1]\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -635,7 +647,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 148
+          "execution_count": 10
         }
       ]
     },
@@ -656,15 +668,15 @@
         "id": "SLC2HlH-Ebhu",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 146
+          "height": 184
         },
-        "outputId": "630882ac-d88d-44d7-f810-e4433bba9ce8"
+        "outputId": "536264f7-8e9a-4d6b-877c-277f48ec21fa"
       },
       "source": [
         "water_pokemon = poke[poke[\"Type 1\"] == 'Water'][ poke[\"Type 2\"] == 'Dragon']\n",
         "water_pokemon.head()"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -757,7 +769,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 151
+          "execution_count": 11
         }
       ]
     }
